--- a/leitorc.html
+++ b/leitorc.html
@@ -49,6 +49,13 @@
         </div>
     </footer>
 
+    <div id="context-menu" >
+        <button id="highlight-from-menu"><img src="icons/grifar.svg"></button>
+        <button id="Copy"><img src="icons/copy.svg"></button>
+        <button id="anotar"><img src="icons/anotar.svg"></button>
+        <button id="dicionario"><img src="icons/dicionario.svg"></button>
+    </div>
+
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jszip/3.1.5/jszip.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/epubjs/dist/epub.min.js"></script>
@@ -65,28 +72,24 @@
         const btnAnterior = document.getElementById("anterior");
         const btnProximo = document.getElementById("proximo");
 
-
         if (caminhoDoLivro) {
             const livro = ePub(caminhoDoLivro);
+            // Sua variável se chama "rendicao", vamos usá-la
             const rendicao = livro.renderTo("leitor", {
                 width: "100%",
                 height: "100%",
-                spread: "none" // Garante que veremos uma página por vez
+                spread: "none"
             });
 
             rendicao.display();
 
-            // Depois que o livro estiver pronto, pegamos os metadados
             livro.ready.then(() => {
-                // ATUALIZA O TÍTULO NA PÁGINA
                 const { title } = livro.packaging.metadata;
                 tituloEl.textContent = title;
-                document.title = title; // Atualiza o título da aba do navegador
+                document.title = title;
 
-                // GERA O SUMÁRIO (TOC)
                 const toc = livro.navigation.toc;
                 const sumarioHtml = document.createElement('ul');
-
                 toc.forEach(item => {
                     const li = document.createElement('li');
                     const a = document.createElement('a');
@@ -94,8 +97,6 @@
                     a.href = item.href;
                     li.appendChild(a);
                     sumarioHtml.appendChild(li);
-
-                    // Faz o link do sumário navegar no livro
                     a.addEventListener("click", (e) => {
                         e.preventDefault();
                         rendicao.display(item.href);
@@ -104,7 +105,6 @@
                 sumarioContainer.appendChild(sumarioHtml);
             });
 
-            // ATUALIZA A BARRA DE PROGRESSO
             livro.locations.generate(1600).then(() => {
                 rendicao.on("relocated", (location) => {
                     const percent = livro.locations.percentageFromCfi(location.start.cfi);
@@ -113,14 +113,66 @@
                 });
             });
 
-            // FUNCIONALIDADE DOS BOTÕES
             btnAnterior.addEventListener("click", () => rendicao.prev());
             btnProximo.addEventListener("click", () => rendicao.next());
+
+            // --- INÍCIO DO CÓDIGO DO MENU DE CONTEXTO ---
+            // NOVO: Cole todo o código do menu aqui dentro
+
+            // 1. Evento para mostrar o menu quando o texto é selecionado
+            rendicao.on("selected", (cfiRange, contents) => {
+                const contextMenu = document.getElementById("context-menu");
+                // ATENÇÃO: O ID do seu contêiner é "leitor", não "viewer"
+                const viewer = document.getElementById("leitor");
+
+                const selection = contents.window.getSelection();
+                if (selection.isCollapsed) {
+                    contextMenu.style.display = "none";
+                    return;
+                }
+
+                const range = selection.getRangeAt(0);
+                const rect = range.getBoundingClientRect();
+                const viewerRect = viewer.getBoundingClientRect();
+
+                const scrollTop = window.scrollY || document.documentElement.scrollTop;
+                const scrollLeft = window.scrollX || document.documentElement.scrollLeft;
+
+                const top = rect.top + viewerRect.top + scrollTop - contextMenu.offsetHeight - 5;
+                const left = rect.left + viewerRect.left + scrollLeft + (rect.width - contextMenu.offsetWidth) / 2;
+
+                contextMenu.style.top = `${top}px`;
+                contextMenu.style.left = `${left}px`;
+                contextMenu.style.display = "block";
+
+                contextMenu.dataset.cfi = cfiRange;
+            });
+
+            // 2. Evento para esconder o menu ao clicar fora
+            document.addEventListener('click', (event) => {
+                const contextMenu = document.getElementById('context-menu');
+                if (contextMenu && !contextMenu.contains(event.target)) {
+                    contextMenu.style.display = 'none';
+                }
+            }, true);
+
+            // 3. Ação do botão "Grifar"
+            document.getElementById("highlight-from-menu").addEventListener("click", () => {
+                const contextMenu = document.getElementById("context-menu");
+                const cfi = contextMenu.dataset.cfi;
+                if (cfi && rendicao) { // Usando a variável "rendicao"
+                    rendicao.annotations.highlight(cfi, {}, () => {}, "highlight", { "fill": "yellow" });
+                }
+                contextMenu.style.display = 'none';
+            });
+
+            // --- FIM DO CÓDIGO DO MENU DE CONTEXTO ---
+
 
         } else {
             tituloEl.textContent = "Erro";
             leitorEl.innerHTML = "<h3>Nenhum livro selecionado.</h3><p>Por favor, volte para a seleção e escolha um livro para ler.</p>";
-            navContainer.style.display = 'none'; // Esconde os botões
+            navContainer.style.display = 'none';
             sumarioContainer.style.display = 'none';
         }
     </script>
