--- a/1selecao.html
+++ b/1selecao.html
@@ -7,6 +7,10 @@
     <link rel="stylesheet" href="2header.css">
     <link rel="stylesheet" href="2variaveis.css">
     <link rel="stylesheet" href="2body.css">
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jszip/3.1.5/jszip.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/epubjs/dist/epub.min.js"></script>
+    
     <title>E-pub</title>
 </head>
 
