Novas melhorias de funcionamento

--- a/leitorc.html
+++ b/leitorc.html
@@ -94,6 +94,7 @@
                 </div>
                 <div class="menu-panel" id="panel-notas">
                     <p>Aqui aparecerão suas notas e destaques salvos.</p>
+                    <button id="export-notes-btn" style="margin-top: 20px; padding: 10px; width: 100%; cursor: pointer;">Exportar Notas e Grifos</button>
                 </div>
             </div>
         </div>
