Mudança de visualização de páginas

--- a/leitorc.html
+++ b/leitorc.html
@@ -68,6 +68,17 @@
                         </div>
                     </div>
                     <div class="setting-group">
+                        <label>Layout da Página</label>
+                        <div class="layout-control">
+                            <label class="layout-option">
+                                <input type="radio" name="layout" value="none" checked> Página Única
+                            </label>
+                            <label class="layout-option">
+                                <input type="radio" name="layout" value="auto"> Página Dupla
+                            </label>
+                        </div>
+                    </div>
+                    <div class="setting-group">
                         <label for="font-select">Fonte</label>
                         <div class="font-select-control">
                             <select id="font-select">
