Nota de Atualização: Novas fontes de texto

--- a/leitorc.html
+++ b/leitorc.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="leitorc.css">
     <title>Leitor</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 </head>
 
 <body>
@@ -97,8 +99,10 @@
                         <div class="font-select-control">
                             <select id="font-select">
                                 <option value="Original">Original</option>
-                                <option value="Literata">Literata</option>
                                 <option value="Georgia">Georgia</option>
+                                <option value="Literata">Literata</option>
+                                <option value="Merriweather">Merriweather (similar à Bookerly)</option>
+                                <option value="Open Sans">Open Sans (Sans-Serif)</option>
                             </select>
                         </div>
                     </div>
