Nota de Atualização: Imagens expansíveis

--- a/leitorc.html
+++ b/leitorc.html
@@ -159,6 +159,11 @@
     <script src="https://cdn.jsdelivr.net/npm/epubjs/dist/epub.min.js"></script>
     <script src="leitorc.js"></script>
 
+    <div id="image-lightbox" class="lightbox">
+        <span class="close-lightbox" title="Fechar">&times;</span>
+        <img class="lightbox-content" id="lightbox-img">
+    </div>
+
 </body>
 
 </html>
