Nota de Atualização: Melhorias nas funções de acessibilidade

--- a/leitor.html
+++ b/leitor.html
@@ -66,9 +66,9 @@
         </div>
         <div class="info_liv">
         </div>
-    </div>
+        </div>
     <div class="toc" role="navigation" aria-label="Sumário do livro">
-        <div id="sumario-container"></div>
+        <div id="sumario-container" tabindex="0"></div>
         <div class="toc-footer">
             <button class="btn" id="btn-ler-livro" title="Ler o livro em voz alta" aria-label="Ler o livro inteiro em voz alta">
             </button>
@@ -102,11 +102,6 @@
         <header class="menu-header">
             <button class="back-btn" id="close-menu-modal-btn" aria-label="Fechar menu">←</button>
             <span class="chapter-title" id="menu-chapter-title">Título do Capítulo</span>
-            <div class="tool-buttons">
-                <button aria-label="Configurações de texto (não implementado)">Aa</button>
-                <button aria-label="Pesquisar (não implementado)">🔍</button>
-                <button aria-label="Marcadores (não implementado)">🔖</button>
-            </div>
         </header>
         <div class="menu-tabs" role="tablist" aria-label="Abas de configurações">
             <button class="menu-tab-btn active" data-target="panel-sumario" role="tab" aria-selected="true" aria-controls="panel-sumario">Sumário</button>
