refactor(css): Improve style organization by separating into multiple files

--- a/leitor.html
+++ b/leitor.html
@@ -5,11 +5,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/leitor.css">
+    <link rel="stylesheet" href="css/layout.css">
+    <link rel="stylesheet" href="css/components.css">
+    <link rel="stylesheet" href="css/accessibility.css">
+    <link rel="stylesheet" href="css/responsive.css">
     <title>Leitor</title>
 </head>
 
 <body>
-<a href="#leitor-container" class="skip-link">Pular para o Conteúdo Principal</a>
 <div id="acessibilidade-modal" class="modal-overlay">
     <div class="modal-content" role="dialog" aria-labelledby="modal-title" aria-describedby="modal-desc" tabindex="-1">
         <h2 id="modal-title">Modo de Leitura</h2>
